--- a/src/content/basics/devtools/cli.mdx
+++ b/src/content/basics/devtools/cli.mdx
@@ -2,7 +2,11 @@
 title: The Apollo CLI
 ---
 
-> ⚠️ **Important:** All `apollo service:*` commands are now **deprecated** in favor of commands in the [Rover CLI](/rover/).
+<Caution>
+
+All `apollo service:*` commands are now **deprecated** in favor of commands in the [Rover CLI](/rover/).
+
+</Caution>
 
 The **Apollo CLI** provides useful commands for interacting with every component of the Apollo platform, including Apollo Client, Apollo Server, and GraphOS Studio.
 
@@ -52,7 +56,11 @@ Most of the Apollo CLI's commands are in the following namespaces:
 
 For a full list of commands in a particular namespace, use the `apollo help` command:
 
-> Omit `npx` from the example commands below if you [installed the Apollo CLI globally](#global-installation).
+<Note>
+
+Omit `npx` from the example commands below if you [installed the Apollo CLI globally](#global-installation).
+
+</Note>
 
 ```
 $ npx apollo help client
