--- a/src/content/community/streaming-at-apollo.mdx
+++ b/src/content/community/streaming-at-apollo.mdx
@@ -8,7 +8,11 @@ We're always looking for ways to engage with the Apollo community, and live stre
 
 Currently, we stream on [Twitch](https://twitch.tv/apollographql).
 
-> Want to see us stream on a particular platform? Let us know [on social media](https://twitter.com/apollographql).
+<Note>
+
+Want to see us stream on a particular platform? Let us know [on social media](https://twitter.com/apollographql).
+
+</Note>
 
 ## What we stream
 
@@ -18,15 +22,19 @@ Each Apollo stream presents one of the following shows:
 
 - **Mission Briefing**: This show is about tools, features, services, and general knowledge content coming from inside and outside Apollo.
 
-- **Orbit**: This show is about what’s going on in the GraphQL/Apollo community such as events, tools, products, and content related to GraphQL.
+- **Orbit**: This show is about what's going on in the GraphQL/Apollo community such as events, tools, products, and content related to GraphQL.
 
-> If you think we're missing something, we'd love to [hear your ideas](https://docs.google.com/forms/d/e/1FAIpQLScJ3BEzSxxackh-cbZgY5rPHh4jKzi4E46UJmkHbgKJvQY0mg/viewform).
+If you think we're missing something, we'd love to [hear your ideas](https://docs.google.com/forms/d/e/1FAIpQLScJ3BEzSxxackh-cbZgY5rPHh4jKzi4E46UJmkHbgKJvQY0mg/viewform).
 
 ## Schedule
 
 If you want to stay up to date on when we'll be streaming next, you can subscribe to [our calendar](https://go.apollo.dev/events-calendar) or check the [schedule panel on Twitch](https://twitch.tv/apollographql).
 
-<img src="./schedule-panel-twitch.png" alt="Twitch schedule panel" class="screenshot">
+<img
+  src="./schedule-panel-twitch.png"
+  alt="Twitch schedule panel"
+  className="screenshot"
+/>
 
 ## Join us
 
