--- a/src/content/graphos/basics/operations/defer.mdx
+++ b/src/content/graphos/basics/operations/defer.mdx
@@ -11,16 +11,20 @@ sequenceDiagram
   Note over Router: Resolves non-deferred<br/>fields
   Router->>Client: Returns data for<br/>non-deferred fields
   Note over Router: Resolves deferred<br/>fields
-  Router->>Client: Returns data for<br/> deferred fields
+  Router->>Client: Returns data for<br/>deferred fields
 ```
 
 Both [cloud supergraphs](../graphs/#cloud-supergraphs) and [self-hosted supergraphs](../graphs/#self-hosted-supergraphs) support deferring fields with the router. Additionally, this feature is compatible with all [supported subgraph libraries](/federation/building-supergraphs/supported-subgraphs), because the logic resides entirely within the router!
 
 ## How do I defer fields in a query?
 
-> ⚠️ **Deferring query fields requires a defer-compatible client library.** These libraries support receiving query data incrementally via multipart HTTP responses.
->
-> Defer support is currently available in Apollo Client for [Web](/react/data/defer) and [Kotlin (experimental)](/kotlin/fetching/defer).
+<Note>
+
+**Deferring query fields requires a defer-compatible client library.** These libraries support receiving query data incrementally via multipart HTTP responses.
+
+Defer support is currently available in Apollo Client for [Web](/react/data/defer) and [Kotlin (experimental)](/kotlin/fetching/defer).
+
+</Note>
 
 If you're using a defer-compatible client, you apply the `@defer` directive to fragments in your queries to specify which fields you want to defer:
 
@@ -31,8 +35,8 @@ query GetTopProductsAndReviews {
     name
     # highlight-start
     # You always apply @defer to a fragment, not to individual fields
-    ... @defer { 
-      reviews { #highlight-line
+    ... @defer {
+      reviews {
         score
       }
     }
@@ -100,7 +104,6 @@ type Product @key(fields: "id") {
   reviews: [Review!]!
 }
 
-
 type Review {
   score: Int!
 }
@@ -130,7 +133,11 @@ query GetProductsAndDeferReviews {
 
 To handle this query, the router first resolves and returns a list of `Product` objects with their IDs and names. Later, the router completes the response by returning review scores for each of those products.
 
-> It doesn't matter _which_ subgraph defines a particular entity field! Queries can defer entity fields that are defined across any number of different subgraphs.
+<Note>
+
+It doesn't matter _which_ subgraph defines a particular entity field! Queries can defer entity fields that are defined across any number of different subgraphs.
+
+</Note>
 
 ### Defining entities in your subgraphs
 
