--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -47,9 +47,7 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 
 ### Core features
 
-These features (along with many others) are available to organizations on Apollo **Serverless** and **Dedicated** plans:
-
-> [See all Apollo plans.](https://www.apollographql.com/pricing/)
+These features (along with many others) are available to organizations on Apollo [**Serverless** and **Dedicated** plans](https://www.apollographql.com/pricing/):
 
 - [**Cloud routing.**](./routing/cloud/)
   - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual **subgraphs**, enabling the router to automatically collect operation metrics that you can then [visualize in GraphOS Studio](./metrics/).
@@ -66,7 +64,11 @@ These features (along with many others) are available to organizations on Apollo
 
 ### Enterprise features
 
-> Test out these features for free with an [Enterprise trial](./org/plans/#enterprise-trials)!
+<Tip>
+
+Test out these features for free with an [Enterprise trial](./org/plans/#enterprise-trials).
+
+</Tip>
 
 Additional GraphOS features are available to organizations on an **Enterprise** plan:
 
