--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -3,27 +3,46 @@ title: Audit log of material GraphOS events
 description: Download a log of all material events that have occured in your organization
 ---
 
-> **This feature is available only with an [Enterprise plan](https://www.apollographql.com/pricing/).**
->
-> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](./plans/#enterprise-trials).
+<EnterpriseFeature />
 
 Organizations with a GraphOS [Enterprise plan](http://apollographql.com/pricing) can export and download an audit log of all material events that have occurred in the organization over a given timeframe.
 
 The interface for requesting an export of auditable events is available under the **Audit** tab of your organization's homepage in GraphOS Studio:
 
-<img src="https://user-images.githubusercontent.com/5922187/127679934-e862077a-0ce0-4e3a-89db-ad9e621111ff.png" class="screenshot" alt="GraphOS Studio audit log" />
+<img
+  src="https://user-images.githubusercontent.com/5922187/127679934-e862077a-0ce0-4e3a-89db-ad9e621111ff.png"
+  className="screenshot"
+  alt="GraphOS Studio audit log"
+/>
 
-> Audit log data is available from July 2021 onward.
+<Note>
+
+Audit log data is available from July 2021 onward.
+
+</Note>
 
 ## Creating an audit log export
 
-> Only [Organization Admins](./members/#organization-wide-member-roles) can request audit exports.
+<Note>
+
+Only [Organization Admins](./members/#organization-wide-member-roles) can request audit exports.
+
+</Note>
 
 When creating an audit log export, you specify a **time range**, along with optional filters to limit actions to a particular **user** or **graph**. The maximum time range that you can request audits for is 180 days, as definied by our retention policy.
 
-<img src="../img/audit-log-create.jpg" class="screenshot" alt="GraphOS Studio Audit Log" width="400" />
+<img
+  src="../img/audit-log-create.jpg"
+  className="screenshot"
+  alt="GraphOS Studio Audit Log"
+  width="400"
+/>
 
-> If you need to export a log with more complex filters and against archives, please email **support@apollographql.com**.
+<Note>
+
+If you need to export a log with more complex filters and against archives, please email **support@apollographql.com**.
+
+</Note>
 
 Exports sometimes take a few minutes to process. When an export is ready, Studio emails you a link to its CSV file, and you can also find that link in the audit exports table. Audit export files are available to download for 30 days.
 
@@ -33,42 +52,46 @@ Note that it takes about 10 to 15 minutes before a performed action can appear i
 
 An exported audit log is a CSV file in which each row represents a material change to your Studio organization. Columns contain the following information:
 
-| Column             | Description                                                                                                                                                                                   |
-| ------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Timestamp**      | The time when the action occurred.                                                                                                                                                            |
-| **Action**         | The type of action that occurred. Possible values are listed in [Audited actions](#audited-actions).                                                                                          |
-| **Resource_ID**    | The ID of the resource that was acted on.                                                                                                                                                     |
-| **Resource_Type**  | The type of resource that was acted on. Possible values are listed in [Resource types](#resource-types).                                                                                      |
-| **Details**        | A JSON object containing details of the action that occurred. The fields of this object vary depending on the action.                                                                         |
-| **Actor_ID**       | The Studio ID of the actor that performed the action.                                                                                                                                         |
-| **Actor_Type**     | The type of actor that performed the action. This is most commonly `USER` (an authenticated user) or `GRAPH` (a tool such as the Rover CLI using a graph API key).                            |
+| Column             | Description                                                                                                                                                                           |
+| ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Timestamp**      | The time when the action occurred.                                                                                                                                                    |
+| **Action**         | The type of action that occurred. Possible values are listed in [Audited actions](#audited-actions).                                                                                  |
+| **Resource_ID**    | The ID of the resource that was acted on.                                                                                                                                             |
+| **Resource_Type**  | The type of resource that was acted on. Possible values are listed in [Resource types](#resource-types).                                                                              |
+| **Details**        | A JSON object containing details of the action that occurred. The fields of this object vary depending on the action.                                                                 |
+| **Actor_ID**       | The Studio ID of the actor that performed the action.                                                                                                                                 |
+| **Actor_Type**     | The type of actor that performed the action. This is most commonly `USER` (an authenticated user) or `GRAPH` (a tool such as the Rover CLI using a graph API key).                    |
 | **Effective_Role** | The [organizational role](./members/#organization-wide-member-roles) of the actor that performed the action, indicating its corresponding [permissions](./members/#role-permissions). |
-| **Actor_Email**    | The actor's email address, if the actor is a `USER`.                                                                                                                                          |
-| **Actor_Name**     | The actor's name, if the actor is a `USER`.                                                                                                                                                   |
-| **Graph_ID**       | The ID of the Studio graph that the action pertains to, if any.                                                                                                                               |
+| **Actor_Email**    | The actor's email address, if the actor is a `USER`.                                                                                                                                  |
+| **Actor_Name**     | The actor's name, if the actor is a `USER`.                                                                                                                                           |
+| **Graph_ID**       | The ID of the Studio graph that the action pertains to, if any.                                                                                                                       |
 
 ## Resource types
 
 An audit log's **Resource_Type** column indicates what type of resource each action was performed _on_. Possible values are listed below.
 
-| Resource type        | Description                                         |
-| -------------------- | --------------------------------------------------- |
-| `ACCOUNT`            | A Studio [organization](./).      |
-| `USER`               | A Studio user.                                      |
-| `GRAPH`              | A Studio [graph]./graphs/overview/).                    |
-| `GRAPH_VARIANT`      | A graph [variant](../graphs/#variants). |
-| `GRAPH_API_KEY`      | A graph [API key](../api-keys/).                     |
-| `USER_API_KEY`       | A user [API key](../api-keys/).                      |
-| `ZENDESK_TICKET`     | An Apollo support ticket.                           |
-| `AUDIT_JOB`          | The generation of an audit log export.              |
-| `EMAIL_SETTINGS`     | A user's marketing email settings.                  |
-| `ACCOUNT_INVITATION` | An invitation for a user to join an organization.   |
+| Resource type        | Description                                       |
+| -------------------- | ------------------------------------------------- |
+| `ACCOUNT`            | A Studio [organization](./).                      |
+| `USER`               | A Studio user.                                    |
+| `GRAPH`              | A Studio [graph]./graphs/overview/).              |
+| `GRAPH_VARIANT`      | A graph [variant](../graphs/#variants).           |
+| `GRAPH_API_KEY`      | A graph [API key](../api-keys/).                  |
+| `USER_API_KEY`       | A user [API key](../api-keys/).                   |
+| `ZENDESK_TICKET`     | An Apollo support ticket.                         |
+| `AUDIT_JOB`          | The generation of an audit log export.            |
+| `EMAIL_SETTINGS`     | A user's marketing email settings.                |
+| `ACCOUNT_INVITATION` | An invitation for a user to join an organization. |
 
 ## Audited actions
 
 The **Action** column of an audit log indicates the type of each action that was performed. Possible values are listed below.
 
-> If your audit log includes an action type that is _not_ listed below and you have questions about it, please contact **support@apollographql.com**.
+<Note>
+
+If your audit log includes an action type that is _not_ listed below and you have questions about it, please contact **support@apollographql.com**.
+
+</Note>
 
 ### Generic actions
 
@@ -93,20 +116,20 @@ These actions are applied to a variety of [resource types](#resource-types), inc
 
 ### Organization members
 
-| Action type           | Description                                                                               |
-| --------------------- | ----------------------------------------------------------------------------------------- |
-| `JOIN_ACCOUNT`        | Adds a user to an organization.                                                           |
-| `LEAVE_ACCOUNT`       | Removes a user from an organization.                                                      |
+| Action type           | Description                                                                           |
+| --------------------- | ------------------------------------------------------------------------------------- |
+| `JOIN_ACCOUNT`        | Adds a user to an organization.                                                       |
+| `LEAVE_ACCOUNT`       | Removes a user from an organization.                                                  |
 | `CHANGE_ROLE`         | Changes a user's [organizational role](./members/#organization-wide-member-roles).    |
 | `OVERRIDE_GRAPH_ROLE` | [Overrides a user's role](./members/#graph-specific-member-roles) for a single graph. |
 
 ### Studio features
 
-| Action type                       | Description                                                                               |
-| --------------------------------- | ----------------------------------------------------------------------------------------- |
+| Action type                       | Description                                                                                         |
+| --------------------------------- | --------------------------------------------------------------------------------------------------- |
 | `IGNORE_OPERATION_IN_CHECKS`      | Ignores a particular GraphQL operation when running [schema checks](../delivery/schema-checks/).    |
 | `MARK_CHANGES_SAFE_FOR_OPERATION` | Marks a particular set of changes as safe when running [schema checks](../delivery/schema-checks/). |
-| `TOGGLE_DATADOG`                  | Enables or disables [Datadog metrics forwarding](../metrics/datadog-integration/).         |
+| `TOGGLE_DATADOG`                  | Enables or disables [Datadog metrics forwarding](../metrics/datadog-integration/).                  |
 
 ### GraphOS plan
 
