--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -2,7 +2,13 @@
 title: Setting up Apollo SSO with Okta
 ---
 
-> ⚠️ **Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).** Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).
+<EnterpriseFeature>
+
+**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).**
+
+Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).
+
+</EnterpriseFeature>
 
 This guide walks through configuring Okta as your Apollo organization's identity provider (IdP) for single sign-on (SSO).
 You can [use Okta's official GraphOS integration](#using-oktas-official-apollo-graphos-integration) (recommended) or create a custom SAML integration (legacy).
@@ -86,7 +92,7 @@ The **Create SAML Integration** dialog includes multiple steps:
 
    - **App name**: `Apollo GraphOS`
    - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.jpg) (optional)
-   
+
    <img
      src="../../img/sso/okta-create-saml-integration.jpg"
      alt="Okta create saml integration step"
@@ -101,7 +107,11 @@ The **Create SAML Integration** dialog includes multiple steps:
      - Also check **Use this for Recipient URL and Destination URL**.
    - **Audience URI (SP Entity ID)**: `PingConnect`
 
-     > ⚠️ If `PingConnect` already exists, use `fd76e619-6c0a-461c-912d-418278929d60`
+     <Note>
+
+     If `PingConnect` already exists, use `fd76e619-6c0a-461c-912d-418278929d60`
+
+     </Note>
 
    - **Default RelayState**: `https://pingone.com/1.0/fd76e619-6c0a-461c-912d-418278929d60`
 
@@ -123,7 +133,7 @@ The **Create SAML Integration** dialog includes multiple steps:
      src="../../img/sso/okta-attribute-statements.jpg"
      alt="Okta configure attributes statements"
      className="screenshot"
-   />{' '}
+   />
 
    Then click **Next**.
 
