--- a/src/content/technotes/TN0016-router-resource-management.mdx
+++ b/src/content/technotes/TN0016-router-resource-management.mdx
@@ -4,11 +4,11 @@ id: TN0016
 tags: [router, kubernetes]
 ---
 
-<EnterpriseFeature
-  text={
-    'Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more.'
-  }
-/>
+<EnterpriseFeature>
+
+Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more.
+
+</EnterpriseFeature>
 
 Determining the correct resource requests and limits for your application pods in a Kubernetes system is not an exact science. Your specific needs depend on many factors, including:
 
@@ -28,6 +28,12 @@ resources:
     memory: '2G'
     # no CPU limit to avoid throttling
 ```
+
+<Tip>
+
+The [router resource estimator](technotes/TN0045-router_resource_estimator/) is a helpful tool for getting a starting baseline for what resources you may need in production based on your expected traffic.
+
+</Tip>
 
 When using [Horizontal pod autoscaling](https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/), we recommend targeting 90% utilization:
 
